Added String.prototype.hyphenize() and fixed Element.prototype.setStyle(), which now sets the correct property, when it's in camelCase.

--- a/tests/style.html
+++ b/tests/style.html
@@ -31,7 +31,7 @@ document.getElementById('btn').addEventListener('click', function()
   p.setStyle('text-align', align);
   p.setStyle({
     color: '#00F',
-    'background-color': '#AEF'
+    backgroundColor: '#AEF'
   });
 }, false);
 
