--- a/tests/selectors.html
+++ b/tests/selectors.html
@@ -5,9 +5,8 @@
   <script type="text/javascript" src="jsunit.js"></script>
   <script type="text/javascript" src="../compat/array.js"></script>
   <script type="text/javascript" src="../compat/core.js"></script>
+  <script type="text/javascript" src="../compat/element.js"></script>
   <script type="text/javascript" src="../compat/selectors.js"></script>
-
-  <script type="text/javascript" src="../addons/element.js"></script>
 
   <div id="test" class="test">test</div>
   <div id="toto" class="toto">
