--- a/tests/events.html
+++ b/tests/events.html
@@ -7,8 +7,7 @@
   <script type="text/javascript" src="../compat/array.js"></script>
   <script type="text/javascript" src="../compat/core.js"></script>
   <script type="text/javascript" src="../compat/events.js"></script>
-
-  <script type="text/javascript" src="../addons/element.js"></script>
+  <script type="text/javascript" src="../compat/element.js"></script>
 
 <script type="text/javascript">
 
