--- a/tests/query_selectors.html
+++ b/tests/query_selectors.html
@@ -165,6 +165,16 @@ jsUnit.add('article[class|=dtd]', function() {
   jsUnit.assertEquals(document.querySelectorAll('article[class|=dtd]').length, 1);
 });
 
+jsUnit.add('article[class^=dtd]', function() {
+  jsUnit.assertEquals(document.querySelectorAll('article[class^=dtd]').length, 1);
+});
+jsUnit.add('article[class$=ample]', function() {
+  jsUnit.assertEquals(document.querySelectorAll('article[class$=ample]').length, 1);
+});
+jsUnit.add('article[class*=exam]', function() {
+  jsUnit.assertEquals(document.querySelectorAll('article[class*=exam]').length, 1);
+});
+
 jsUnit.add(':first-child', function() {
   jsUnit.assertEquals(document.querySelectorAll(':first-child').length, 1);
 });
