Fixed Ajax, and renamed Function.prototype.buffered to Function.prototype.debounce.

--- a/tests/ui/dialog.html
+++ b/tests/ui/dialog.html
@@ -3,7 +3,7 @@
   <title>some windows</title>
   <style type="text/css">
   
-  body { font: normal 12px/1.5 lucida grande, verdana, sans-serif; background: red; }
+  body { font: normal 12px/1.5 lucida grande, verdana, sans-serif; background: #07A; }
   /*
   body > p { height: 2000px; width: 2000px; position: relative; }
   body > p button { position: absolute; bottom: 0; right: 0; }
