Fixed some problems with IE.

--- a/tests/ui/dialog.html
+++ b/tests/ui/dialog.html
@@ -32,6 +32,7 @@
 <script type="text/javascript" src="../../compat/array.js"></script>
 <script type="text/javascript" src="../../compat/core.js"></script>
 <script type="text/javascript" src="../../compat/element.js"></script>
+<script type="text/javascript" src="../../compat/events.js"></script>
 <script type="text/javascript" src="../../compat/selectors.js"></script>
 
 <script type="text/javascript" src="../../addons/object.js"></script>
