--- a/tests/ui/notification.html
+++ b/tests/ui/notification.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>some windows</title>
+  <title>UI.Notification (displays notification windows)</title>
   <style type="text/css">
   
   body { font: normal 12px/1.5 lucida grande, verdana, sans-serif; background: #07A; }
@@ -25,6 +25,7 @@
 <script type="text/javascript" src="../../compat/array.js"></script>
 <script type="text/javascript" src="../../compat/core.js"></script>
 <script type="text/javascript" src="../../compat/element.js"></script>
+<script type="text/javascript" src="../../compat/events.js"></script>
 <script type="text/javascript" src="../../compat/selectors.js"></script>
 
 <script type="text/javascript" src="../../addons/object.js"></script>
