--- a/tests/elements.html
+++ b/tests/elements.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
 <head>
 </head>
 <body>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <script type="text/javascript" src="jsunit.js"></script>
   <script type="text/javascript" src="../compat/array.js"></script>
   <script type="text/javascript" src="../compat/core.js"></script>
