--- a/tests/tests.html
+++ b/tests/tests.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
 <head>
   <title>Some manual event tests</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 </head>
 <body>
 
