--- a/tests/ui/autocompleter.html
+++ b/tests/ui/autocompleter.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
 <head>
   <title>UI.Autocompleter</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <style type="text/css">
   
   body { font: normal 12px/1.5 lucida grande, verdana, sans-serif; }
@@ -27,14 +29,16 @@
 <script type="text/javascript" src="../../compat/element.js"></script>
 <script type="text/javascript" src="../../compat/events.js"></script>
 <script type="text/javascript" src="../../compat/selectors.js"></script>
+<script type="text/javascript" src="../../compat/json2.js"></script>
+<script type="text/javascript" src="../../compat/xmlhttprequest.js"></script>
 
 <script type="text/javascript" src="../../addons/object.js"></script>
 <script type="text/javascript" src="../../addons/function.js"></script>
 <script type="text/javascript" src="../../addons/array.js"></script>
 <script type="text/javascript" src="../../addons/string.js"></script>
 <script type="text/javascript" src="../../addons/classname.js"></script>
-<script type="text/javascript" src="../../addons/style.js"></script>
 <script type="text/javascript" src="../../addons/element.js"></script>
+<script type="text/javascript" src="../../addons/style.js"></script>
 <script type="text/javascript" src="../../addons/ajax.js"></script>
 
 <script type="text/javascript" src="../../ui/ui.js"></script>
