--- a/tests/ui/dialog.html
+++ b/tests/ui/dialog.html
@@ -1,6 +1,9 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
 <head>
-  <title>some windows</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	
+  <title>some dialogs</title>
   <style type="text/css">
   
   body { font: normal 12px/1.5 lucida grande, verdana, sans-serif; background: #07A; }
@@ -34,13 +37,17 @@
 <script type="text/javascript" src="../../compat/element.js"></script>
 <script type="text/javascript" src="../../compat/events.js"></script>
 <script type="text/javascript" src="../../compat/selectors.js"></script>
+<script type="text/javascript" src="../../compat/json2.js"></script>
+<script type="text/javascript" src="../../compat/xmlhttprequest.js"></script>
 
 <script type="text/javascript" src="../../addons/object.js"></script>
 <script type="text/javascript" src="../../addons/function.js"></script>
 <script type="text/javascript" src="../../addons/array.js"></script>
 <script type="text/javascript" src="../../addons/string.js"></script>
 <script type="text/javascript" src="../../addons/classname.js"></script>
+<script type="text/javascript" src="../../addons/element.js"></script>
 <script type="text/javascript" src="../../addons/style.js"></script>
+<script type="text/javascript" src="../../addons/ajax.js"></script>
 
 <script type="text/javascript" src="../../ui/ui.js"></script>
 <script type="text/javascript" src="../../ui/overlay.js"></script>
@@ -52,15 +59,14 @@
 
 document.getElementById('open-dialog').addEventListener('click', function()
 {
-  var dialog = new UI.Dialog({modal: true});
+  var dialog = new UI.Dialog({modal: true, position: ['center', 'middle']});
   
   dialog.setTitle('File Manager');
-
-//  dialog.setContent('<p>this is some content as string</p>');
+  
   var p = document.createElement('p');
-  p.innerHTML = 'this is some content as element';
+  p.innerHTML = 'this is some content';
   dialog.setContent(p);
-
+  
   dialog.display();
 }, false);
 
