--- a/tests/ui/notification.html
+++ b/tests/ui/notification.html
@@ -1,9 +1,12 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
 <head>
   <title>UI.Notification (displays notification windows)</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <style type="text/css">
   
   body { font: normal 12px/1.5 lucida grande, verdana, sans-serif; background: #07A; }
+  body > p { text-align: right; }
   /*
   body > p { height: 2000px; width: 2000px; position: relative; }
   body > p button { position: absolute; bottom: 0; right: 0; }
@@ -11,7 +14,8 @@
   
   .notification { position: fixed; top: 1.5em; right: 1.5em; }
   .notification .background { background: #000; opacity: .75;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px; }
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
+    filter: alpha(opacity=75); -moz-border-radius: 4px; -webkit-border-radius: 4px; }
   .notification .content { position: relative; padding: 1.5em; color: #FFF; font-weight: bold; }
   
   </style>
@@ -27,21 +31,22 @@
 <script type="text/javascript" src="../../compat/element.js"></script>
 <script type="text/javascript" src="../../compat/events.js"></script>
 <script type="text/javascript" src="../../compat/selectors.js"></script>
+<script type="text/javascript" src="../../compat/json2.js"></script>
+<script type="text/javascript" src="../../compat/xmlhttprequest.js"></script>
 
 <script type="text/javascript" src="../../addons/object.js"></script>
 <script type="text/javascript" src="../../addons/function.js"></script>
 <script type="text/javascript" src="../../addons/array.js"></script>
 <script type="text/javascript" src="../../addons/string.js"></script>
 <script type="text/javascript" src="../../addons/classname.js"></script>
+<script type="text/javascript" src="../../addons/element.js"></script>
 <script type="text/javascript" src="../../addons/style.js"></script>
+<script type="text/javascript" src="../../addons/ajax.js"></script>
 
 <script type="text/javascript" src="../../ui/ui.js"></script>
-<script type="text/javascript" src="../../ui/overlay.js"></script>
-<script type="text/javascript" src="../../ui/window.js"></script>
-<script type="text/javascript" src="../../ui/dialog.js"></script>
 <script type="text/javascript" src="../../ui/notification.js"></script>
 
-<!--script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script-->
+<script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script>
 <script type="text/javascript">
 
 document.getElementById('open-notification').addEventListener('click', function()
