--- a/tests/style_opacity.html
+++ b/tests/style_opacity.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="../compat/array.js"></script>
 <script type="text/javascript" src="../compat/core.js"></script>
 
+<script type="text/javascript" src="../addons/string.js"></script>
 <script type="text/javascript" src="../addons/style.js"></script>
 
 <script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script>
