--- a/tests/ui/dialog.html
+++ b/tests/ui/dialog.html
@@ -14,12 +14,11 @@
   .overlay { background: #000; opacity: .5; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; filter: alpha(opacity=50); }
   
   .dialog { border: 1px solid; border-top-color: #BBB; border-left-color: #BBB;
-    border-right-color: #888; border-bottom-color: #888; background: #DDD;
-    min-width: 500px;, _width: 500px; }
+    border-right-color: #888; border-bottom-color: #888; background: #DDD; }
   .dialog .titlebar { text-align: right; border: solid #DDD; border-width: 4px 4px 0; font-weight: bold; }
   .dialog .titlebar .title { float: left; }
   .dialog .titlebar a { cursor: pointer; }
-  .dialog .content { min-height: 250px; _height: 250px;
+  .dialog .content { min-height: 250px; _height: 250px; min-width: 500px;, _width: 500px;
     margin: 4px; padding: 4px; background: #FFF;
     border: 1px solid; border-top-color: #888; border-left-color: #888;
     border-right-color: #BBB; border-bottom-color: #BBB; }
