--- a/tests/ui/tooltip.html
+++ b/tests/ui/tooltip.html
@@ -13,6 +13,8 @@
   .tooltip .content { padding: .5em 1.5em; background: #888; color: #FFF;
     -moz-border-radius: 4px; -webkit-border-radius: 4px; }
   
+  .tooltip .arrow { width: 0; height: 0; }
+  
   .top .arrow { border-top: 10px #888 solid; border-left: 5px transparent solid;
     border-right: 5px transparent solid; border-bottom: 0; }
   
